# c-xrefactory

./: .clang-format  .codecov.yml  .dir-locals  .dir-locals.el  .gdbinit  .gitignore  .gitmodules  .travis.merge_to_stable_maybe.sh  .travis.yml  .travis_after_success_linux.sh  .travis_install_linux.sh  .travis_merge_to_stable_maybe.sh  00-guidebook.header  CHANGES.md  CLAUDE.md  CreateXrefDistribution  INSTALL  INSTALL.OS2  LICENSE  Makefile  README.adoc  README.html  README.md  Untabify  WARP.md  byacc.1.9.patch.txt  c-xrefactory.html  c-xrefactory.rcp  c-xrefrc.man  c-xrefrc.txt  c-xrefserver.html  c-xrefserver.md  codecov.yml  emacs-dev  env  guidebook.html  index.html  jar2jar0.bat  load.el  manual.html  (+1 more)
.asciidoctor/diagram/: ContainerView.png.cache  CxrefCore.png.cache  CxrefProgram.png.cache  EditorExtension.png.cache  SystemContext.png.cache  ast.png.cache  buffer.png.cache  structures.png.cache
.github/workflows/: asciidoctor-docs.yml  ci.yml  deploy_docs.yaml  learn-github-actions.yml
ADRs/: README.md
adr/: 0002-remove-enum-and-struct-fill-macro-generation.md  0003-use-markdown-architectural-decision-records.md  0006-remove-prechecks.md  0007-use-classic-adr-s-for-architecture-decisions.md  0009-remove-alignment.md  0010-remove-support-for-javadoc.md
adr/templates/: template.md
bugs/cannot_get_end_of_parameter/: Makefile  commands.input  expected
bugs/extract_function_with_out_variable/: Makefile
byacc-1.9/: .gitignore  CSU.diffs  Makefile  README  README.md  closure.c  closure.h  debian.control  debian.rules  defs.h  error.c  error.h  lalr.c  lalr.h  lr0.c  lr0.h  main.c  main.h  mkpar.c  mkpar.h  output.c  output.h  reader.c  reader.h  skeleton.c  skeleton.h  skeleton.mar  symtab.c  symtab.h  verbose.c  verbose.h  warshall.c  warshall.h
cexercise/: completions.c  ideCompileAndRun.c  index.c
cexercise/refactorings/: extract.c
design/: context.puml
design/adr/: 0001-I-use-markdown-architectural-decision-records.md  0004-I-remove-prechecks.md
doc/: .gitignore  .structurizr.properties  .xrefrc  Demo.java  INSTALL  INSTALL.WIN  MakeXrefs  Makefile  Man  NEWS  README  README.adoc  README.md  READMETOP  TROUBLES  Test.java  UpdateXrefs  _c-xrefrc  adr-process.md  c-xref.man  c-xrefactory-design.adoc  c-xrefactory-design.asciidoc  c-xrefactory-manual.adoc  c-xrefactory-manual.asciidoc  c-xrefactory.md  c-xrefinstall  c-xrefrc.ex  c-xrefrc.example  c-xrefrc.man  c-xrefserver.html  c-xrefserver.md  c-xrefserver.txt  c-xrefsetup  c-xrefspeller.man  c-xrefspeller.txt  demo.c  design.adoc  duplicate-references-investigation.md  guidebook.adoc  index.adoc  (+12 more)
doc/ADRs/: ADR-0001-1999-12-31-C-store-reference-data.md  README.md  template.md
doc/adr/: 0002-remove-enum-and-struct-fill-macro-generation.md  0002-store-reference-data-in-text-files-with-encoding.md  0002-use-markdown-architectural-decision-records.md  0003-D-automatically-find-config-files.md  0003-remove-html-generation.md  0004-automatically-find-config-files.md  0004-remove-html-generation.md  0006-remove-prechecks.md  0008-remove-no-stdoptions.md  0009-remove-alignment.md  0011-remove-support-for-java.md  0012-remove-lexem-stream-caching.md  0013-limited-extern-detection-in-c-files.md  0014-adopt-on-demand-parsing-architecture.md  0015-remove-support-for-jedit.md  0016-retain-custom-byacc-defer-bison-migration.md  0017-pass-structs-by-value-in-extractions.md  0018-remove-strict-ansi-option.md  0019-unify-browse-terminology.md  0020-separate-buffer-sync-from-operation-dispatch.md  template.md  (+5 more)
docs/: 01-intro.html  02-context.html  03-functional-overview.html  04-quality-attributes.html  05-constraints.html  06-principles.html  07-software-architecture.html  08-code.html  09-modules.html  10-datastructures.html  11-algorithms.html  12-development-environment.html  13-deployment.html  13-deployment.md  14-decision-log.html  15-insights.html  16-archive.html
editors/: Makefile
src/: .c-xrefrc  .clangd  .gitignore  Doxyfile  LineCount  Makefile  Makefile.bs  Makefile.common  Makefile.dependencies  Makefile.development  Makefile.freebsd  Makefile.linux  Makefile.macosx  Makefile.objs  Makefile.os2  Makefile.solaris  Makefile.windows  NOTES.md  README  TODO  TODO.org  Tupfile  access.h  ast.h  bitmaps.h  browsermenu.c  browsermenu.h  browsermenu.mock  browsermenu_tests.c  browsingmenu.c  browsingmenu.h  browsingmenu.mock  browsingmenu_tests.c  c++gram.y.original  c-tests.sh  c-xref  c-xref-java  c-xref.bs  c-xrefactory.doxygen  c-xrefrc.tpl  (+479 more)
src/tests/: .gitignore  Makefile  commons_mock.c  filetab_tests.c  misc_mock.c
src/unittests/: .gitignore  Makefile  Tupfile  c_parser.mock  caching.mock  caching_tests.c  cct.mock  cexp_parser.mock  cgram_tests.c  characterbuffer.mock  characterreader.mock  charbuf.mock  classFileReader.mock  classcaster.mock  classfilereader.mock  classfilereader_tests.c  classh.mock  classhierarchy.mock  classhierarchy_tests.c  commons.mock  commons_tests.c  complete.mock  complete_tests.c  cxfile.mock  cxfile_tests.c  cxref.mock  cxref_tests.c  editor.mock  editor_tests.c  editorbuffertab.mock  extract.mock  extract_tests.c  filedescriptor.mock  fileio.mock  fileio_tests.c  filetab.mock  filetab_tests.c  filetable.mock  filetable_tests.c  globals.mock  (+47 more)
structurizr/: README.md  workspace.dsl
tests/: .gitignore  Makefile  Makefile.boilerplate  Makefile.cli  Makefile.lsp  Makefile.messages  Makefile.server  Makefile.template  README  c-xrefrc.tpl  run-c-xref  run-with-progress  run_test
utils/: .gitignore  adr-renum  build  clean-tests  covers.py  cxref_extract  cxref_reader  cxref_reader.py  cxref_reader_test.py  dependencies  dependsFrom  dependsGraph  dependsIn  dependsOn  difftest  edit_server_driver.py  emacs-dev  emacs-devel  emacs-lsp  failed  failing  find_FILL_only_names.sh  linecount  lsp-initialize.el  lsp_compare.py  lsp_driver.py  messages2commands.py  ok  olcx_used  option_used.sh  rebind-for-lsp.el  replace_embeds_with_include_puml.py  sandboxed  server_driver.py  struct2dot.py  struct_grapher  struct_grapher.py  structurizr  test-cov  yacc_gdb.py
(+1891 files in other folders)
